# polymarket_data

./: README.md  pyproject.toml
backtester/: __init__.py  datamodel.py  engine.py  fill_model.py  metrics.py
examples/: btc_updown_backtest.ipynb  run_backtest.py  tutorial.ipynb
polymarket_data/: __init__.py  core.py  gamma_client.py  models.py  subgraph_client.py
